JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -39,8 +39,14 @@
 	* `테이블 전략`
 
 ### Join 전략
-
+```java
+public abstract class Item {
+	@Id @GeneratedValue
+	@Column(name="ITEM_ID")
+	p
+}
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLT
-kwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbLTU5MDA2NzAzOCwtMTI3NTYxMDE1NSwtMT
+Q2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
 -->
