JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -39,14 +39,35 @@
 	* `테이블 전략`
 
 ### Join 전략
+* Item
 ```java
+@Entity
+@Inheritance(strategy= InheritanceType.JOINED)
+@DiscriminatorColumn(name = "DTYPE")
 public abstract class Item {
 	@Id @GeneratedValue
 	@Column(name="ITEM_ID")
-	p
+	private Long id;
+	private String name;
+	private int price;
 }
 ```
+
+* Album
+```java
+@Entity
+@Inheritance(strategy= InheritanceType.JOINED)
+@DiscriminatorColumn(name = "DTYPE")
+public abstract class Item {
+	@Id @GeneratedValue
+	@Column(name="ITEM_ID")
+	private Long id;
+	private String name;
+	private int price;
+}
+```
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU5MDA2NzAzOCwtMTI3NTYxMDE1NSwtMT
-Q2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbODQwNjk0MDksLTEyNzU2MTAxNTUsLTE0Nj
+ExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
 -->
