JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -56,18 +56,22 @@ public abstract class Item {
 * Album
 ```java
 @Entity
-@Inheritance(strategy= InheritanceType.JOINED)
-@DiscriminatorColumn(name = "DTYPE")
-public abstract class Item {
-	@Id @GeneratedValue
-	@Column(name="ITEM_ID")
-	private Long id;
-	private String name;
-	private int price;
+@DiscriminatorValue("A")
+public abstract class Album extends Item {
+	private String artist;
+}
+```
+
+* Movie
+```java
+@Entity
+@DiscriminatorValue("M")
+public abstract class Movie extends Item {
+	private String director;
 }
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODQwNjk0MDksLTEyNzU2MTAxNTUsLTE0Nj
-ExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbMTgwNTg2Njc5NSwtMTI3NTYxMDE1NSwtMT
+Q2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
 -->
