JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -39,6 +39,26 @@
 	* `테이블 전략`
 
 ### Join 전략
+```
+      ------------
+      ITEM
+      ------------
+      ITEM_ID (PK)
+      NAME
+      PRICE
+      DTYPE
+      ------------
+            |
+ |-----|-----|
+ |     |     |
+--------
+ALBUM
+________
+ITEM_ID(PK,FK)
+ARTIST
+---
+음반   영화    책
+```
 * Item
 ```java
 @Entity
@@ -68,10 +88,11 @@ public abstract class Album extends Item {
 @DiscriminatorValue("M")
 public abstract class Movie extends Item {
 	private String director;
+	private String actor;
 }
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgwNTg2Njc5NSwtMTI3NTYxMDE1NSwtMT
+eyJoaXN0b3J5IjpbMTkxMjM3MjM0NiwtMTI3NTYxMDE1NSwtMT
 Q2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
 -->
