JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -40,24 +40,23 @@
 
 ### Join 전략
 ```
-      ------------
-      ITEM
-      ------------
-      ITEM_ID (PK)
-      NAME
-      PRICE
-      DTYPE
-      ------------
-            |
- |-----|-----|
- |     |     |
---------
-ALBUM
-________
-ITEM_ID(PK,FK)
-ARTIST
----
-음반   영화    책
+	      ------------
+	      ITEM
+	      ------------
+	      ITEM_ID (PK)
+	      NAME
+	      PRICE
+	      DTYPE
+	      ------------
+	            |
+       |--------|----------|
+       |                   |
+--------------   	--------------
+ALBUM			 	MOVIE
+--------------		--------------
+ITEM_ID(PK,FK)		ITEM_ID(PK,FK)
+ARTIST				DIRECTO
+--------------		--------------
 ```
 * Item
 ```java
@@ -93,6 +92,6 @@ public abstract class Movie extends Item {
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxMjM3MjM0NiwtMTI3NTYxMDE1NSwtMT
-Q2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbLTE1OTM0MDU1MzUsLTEyNzU2MTAxNTUsLT
+E0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
 -->
