JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -55,8 +55,9 @@
 ALBUM			 	MOVIE
 --------------		--------------
 ITEM_ID(PK,FK)		ITEM_ID(PK,FK)
-ARTIST				DIRECTO
---------------		--------------
+ARTIST				DIRECTOR
+--------------      ACTOR
+					--------------
 ```
 * Item
 ```java
@@ -92,6 +93,6 @@ public abstract class Movie extends Item {
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1OTM0MDU1MzUsLTEyNzU2MTAxNTUsLT
+eyJoaXN0b3J5IjpbLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLT
 E0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
 -->
