JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -59,7 +59,7 @@ ARTIST				DIRECTOR
 --------------      ACTOR
 					--------------
 ```
-* Item
+* [Item](https://github.com/tatarobo/JPA/blob/master/programming/src/main/java/study/jpa/product/persistent/Item.java)
 ```java
 @Entity
 @Inheritance(strategy= InheritanceType.JOINED)
@@ -93,6 +93,7 @@ public abstract class Movie extends Item {
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLT
-E0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMj
+c1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4
+ODEwXX0=
 -->
