JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -65,11 +65,6 @@ ARTIST              DIRECTOR
 @Inheritance(strategy= InheritanceType.JOINED)
 @DiscriminatorColumn(name = "DTYPE")
 public abstract class Item {
-	@Id @GeneratedValue
-	@Column(name="ITEM_ID")
-	private Long id;
-	private String name;
-	private int price;
 }
 ```
 
@@ -78,7 +73,6 @@ public abstract class Item {
 @Entity
 @DiscriminatorValue("A")
 public abstract class Album extends Item {
-	private String artist;
 }
 ```
 
@@ -87,13 +81,11 @@ public abstract class Album extends Item {
 @Entity
 @DiscriminatorValue("M")
 public abstract class Movie extends Item {
-	private String director;
-	private String actor;
 }
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI4ODY0OTgzNCw3NDEwNDYyMDYsLTEyND
-MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
-Mzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbOTgwMTI2MjM1LDc0MTA0NjIwNiwtMTI0Mz
+E2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAz
+Nzc3LDU2NTU0ODgxMF19
 -->
