JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -65,6 +65,9 @@ ARTIST              DIRECTOR
 @Inheritance(strategy= InheritanceType.JOINED)
 @DiscriminatorColumn(name = "DTYPE")
 public abstract class Item {
+	@Id @GeneratedValue
+	@Column(name = "ITEM_ID")
+	private Long id;
 }
 ```
 
@@ -85,7 +88,7 @@ public abstract class Movie extends Item {
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTgwMTI2MjM1LDc0MTA0NjIwNiwtMTI0Mz
-E2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAz
-Nzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbLTQ1MzY0NjQ4Myw3NDEwNDYyMDYsLTEyND
+MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
+Mzc3Nyw1NjU1NDg4MTBdfQ==
 -->
