JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -87,8 +87,15 @@ public abstract class Movie extends Item {
 }
 ```
 
+* Book
+```java
+@Entity
+@DiscriminatorValue("M")
+public abstract class Movie extends Item {
+}
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ1MzY0NjQ4Myw3NDEwNDYyMDYsLTEyND
-MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
-Mzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbLTE0MDg0NzExNTEsNzQxMDQ2MjA2LC0xMj
+QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
+MDM3NzcsNTY1NTQ4ODEwXX0=
 -->
