JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -55,8 +55,8 @@
 ALBUM			 	MOVIE
 --------------		--------------
 ITEM_ID(PK,FK)		ITEM_ID(PK,FK)
-ARTIST              DIRECTOR
---------------      ACTOR
+ARTIST        		DIRECTOR
+-------------- 		ACTOR
                     --------------
 ```
 * [Item](https://github.com/tatarobo/JPA/blob/master/programming/src/main/java/study/jpa/product/persistent/Item.java)
@@ -90,12 +90,15 @@ public abstract class Movie extends Item {
 * Book
 ```java
 @Entity
-@DiscriminatorValue("M")
+@DiscriminatorValue("B")
+@PrimaryKeyJoinColumn(name = "BOOK_ID")
 public abstract class Movie extends Item {
 }
 ```
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MDg0NzExNTEsNzQxMDQ2MjA2LC0xMj
-QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
-MDM3NzcsNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbLTMwOTIwMTEzLDc0MTA0NjIwNiwtMTI0Mz
+E2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAz
+Nzc3LDU2NTU0ODgxMF19
 -->
