JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -48,16 +48,16 @@
 	      PRICE
 	      DTYPE
 	      ------------
-	            |
-       |--------|----------|------------------
-       |                   |
---------------   	--------------
-ALBUM			 	MOVIE
---------------		--------------
-ITEM_ID(PK,FK)		ITEM_ID(PK,FK)
-ARTIST        		DIRECTOR
--------------- 		ACTOR
-                    --------------
+	                       |
+       |-------------------|-------------------|
+       |                   |                   |
+--------------      --------------      --------------
+ALBUM               MOVIE               BOOK
+--------------      --------------      --------------
+ITEM_ID(PK,FK)      ITEM_ID(PK,FK)      BOOK_ID(PK,FK)
+ARTIST              DIRECTOR            AUTHOR
+--------------      ACTOR               ISBN
+                    --------------      --------------
 ```
 * [Item](https://github.com/tatarobo/JPA/blob/master/programming/src/main/java/study/jpa/product/persistent/Item.java)
 ```java
@@ -98,7 +98,7 @@ public abstract class Movie extends Item {
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNzQxMDYwMDEsNzQxMDQ2MjA2LC0xMj
+eyJoaXN0b3J5IjpbLTEyMTUxODQzOTMsNzQxMDQ2MjA2LC0xMj
 QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
 MDM3NzcsNTY1NTQ4ODEwXX0=
 -->
