JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -96,9 +96,19 @@ public abstract class Movie extends Item {
 }
 ```
 
+* 장점
+	* 테이블 정규화
+	* 외래키 참조 무결성 제약조건 가능
+	* 저장공간 효율적 사용
+* 단점
+	* 조인 사용으로 인한 성능 저하
+	* 조회 쿼리 복잡
+	* 데이터 등록 시 insert SQL 두 번 실행
+	* 
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI3NTQyMzM5Myw3NDEwNDYyMDYsLTEyND
-MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
-Mzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbLTEyODU3ODk4MzEsNzQxMDQ2MjA2LC0xMj
+QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
+MDM3NzcsNTY1NTQ4ODEwXX0=
 -->
