JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -1,3 +1,5 @@
+`[TOC]`
+
 
 # 7. 고급 매핑 개요
 
@@ -108,7 +110,7 @@ public abstract class Movie extends Item {
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyODU3ODk4MzEsNzQxMDQ2MjA2LC0xMj
+eyJoaXN0b3J5IjpbLTEyMzUxMTAxMjcsNzQxMDQ2MjA2LC0xMj
 QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
 MDM3NzcsNTY1NTQ4ODEwXX0=
 -->
