JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -37,7 +37,7 @@
 	* 각각의 서브타입마다 하나의 테이블을 생성
 	* `테이블 전략`
 
-### Join 전략
+### 7.1.1 Joined Strategy
 ```
                      ------------
                      ITEM
@@ -103,11 +103,22 @@ public abstract class Movie extends Item {
 	* 조인 사용으로 인한 성능 저하
 	* 조회 쿼리 복잡
 	* 데이터 등록 시 insert SQL 두 번 실행
-	* 
+
+### 7.1.2 Single-Table Strategy
+```
+                     ------------
+                     ITEM
+                     ------------
+                     ITEM_ID (PK)
+                     NAME
+                     PRICE
+                     D
+                     ------------
+```
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3OTcxMjQyNDksNzQxMDQ2MjA2LC0xMj
-QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
-MDM3NzcsNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbNTE4NzE3MTA4LDc0MTA0NjIwNiwtMTI0Mz
+E2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAz
+Nzc3LDU2NTU0ODgxMF19
 -->
