JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -112,13 +112,25 @@ public abstract class Movie extends Item {
                      ITEM_ID (PK)
                      NAME
                      PRICE
-                     D
+                     ARTIST
+                     DIRECTOR
+                     ACTOR
+                     AUTHOR
+                     ISBN
+                     DTYPE
                      ------------
+```
+* 주의사항
+	* 자식 Entity가 mapping한 컬럼은 모두 null을 허용해야 함.
+
+```java
+@Entity
+@Inheritance(strage
 ```
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTE4NzE3MTA4LDc0MTA0NjIwNiwtMTI0Mz
-E2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAz
-Nzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbLTIwMjAwNzg1MTksNzQxMDQ2MjA2LC0xMj
+QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
+MDM3NzcsNTY1NTQ4ODEwXX0=
 -->
