JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -120,17 +120,24 @@ public abstract class Movie extends Item {
                      DTYPE
                      ------------
 ```
-* 주의사항
-	* 자식 Entity가 mapping한 컬럼은 모두 null을 허용해야 함.
 
 ```java
 @Entity
-@Inheritance(strage
+@Inheritance(strategy = InheritanceType.SINGLE_TABLE)
+@DiscriminatorColumn(name = "DTYPE")
+public abstract class Item {
+}
+// 나머지 동일함.
 ```
+* 주의사항
+	* 자식 Entity가 mapping한 컬럼은 모두 null을 허용해야 함.
+* 장점
+	* 조인 필요 없음 -> 성능
+
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMjAwNzg1MTksNzQxMDQ2MjA2LC0xMj
-QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
-MDM3NzcsNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbLTIzODk1MjU3LDc0MTA0NjIwNiwtMTI0Mz
+E2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAz
+Nzc3LDU2NTU0ODgxMF19
 -->
