--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -129,15 +129,20 @@ public abstract class Item {
 }
 // 나머지 동일함.
 ```
-* 주의사항
-	* 자식 Entity가 mapping한 컬럼은 모두 null을 허용해야 함.
 * 장점
-	* 조인 필요 없음 -> 성능
+	* 조인 필요 없음 -> 조회 성능 빠르다.
+	* 조회 쿼리가 단순.
+* 단점
+	* 자식 Entity가 mapping한 컬럼은 모두 null을 허용해야 함.
+	* 단일 테이블에 모든 것을 저장 -> 테이블이 커짐 -> 상황에 따라 조회 성능이 오히려 느려짐.
+* 특징
+	* 구분 컬럼 반드시 사용 (@DiscriminatorColumn)
+	* 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIzODk1MjU3LDc0MTA0NjIwNiwtMTI0Mz
-E2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAz
-Nzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbLTg4OTQxNTgxNiw3NDEwNDYyMDYsLTEyND
+MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
+Mzc3Nyw1NjU1NDg4MTBdfQ==
 -->
