JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -137,12 +137,16 @@ public abstract class Item {
 	* 단일 테이블에 모든 것을 저장 -> 테이블이 커짐 -> 상황에 따라 조회 성능이 오히려 느려짐.
 * 특징
 	* 구분 컬럼 반드시 사용 (@DiscriminatorColumn)
-	* 
+	* @DiscriminatorValue 미지정 시 Entity 이름을 기본값으로 사용함.
+		* 예: `Movie, Album, Book`
+
+### 7.1.3 Table-per-Concrete-Class Strategy
+
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4OTQxNTgxNiw3NDEwNDYyMDYsLTEyND
+eyJoaXN0b3J5IjpbLTY2NzEwMDAzOCw3NDEwNDYyMDYsLTEyND
 MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
 Mzc3Nyw1NjU1NDg4MTBdfQ==
 -->
