--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -141,12 +141,23 @@ public abstract class Item {
 		* 예: `Movie, Album, Book`
 
 ### 7.1.3 Table-per-Concrete-Class Strategy
+```
 
+--------------      --------------      --------------
+ALBUM               MOVIE               BOOK
+--------------      --------------      --------------
+ITEM_ID(PK,FK)      ITEM_ID(PK,FK)      BOOK_ID(PK,FK)
+NAME                NAME                NAME
+PRICE               PRICE               PRICE
+ARTIST              DIRECTOR            AUTHOR
+--------------      ACTOR               ISBN
+                    --------------      --------------
+```
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY2NzEwMDAzOCw3NDEwNDYyMDYsLTEyND
-MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
-Mzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbODA1MzM2NDA1LDc0MTA0NjIwNiwtMTI0Mz
+E2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAz
+Nzc3LDU2NTU0ODgxMF19
 -->
