JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -142,11 +142,10 @@ public abstract class Item {
 
 ### 7.1.3 Table-per-Concrete-Class Strategy
 ```
-
 --------------      --------------      --------------
 ALBUM               MOVIE               BOOK
 --------------      --------------      --------------
-ITEM_ID(PK,FK)      ITEM_ID(PK,FK)      BOOK_ID(PK,FK)
+ITEM_ID(PK)         ITEM_ID(PK)         BOOK_ID(PK)
 NAME                NAME                NAME
 PRICE               PRICE               PRICE
 ARTIST              DIRECTOR            AUTHOR
@@ -154,10 +153,17 @@ ARTIST              DIRECTOR            AUTHOR
                     --------------      --------------
 ```
 
-
-
+```java
+@Entity
+@Inheritance(strategy = InheritanceType.TABLE_PER_CLASS)
+public abstract class Item {
+}
+// 나머지 동일함. (@DiscriminatorValue 사용안함)
+```
+* 일반적으로 추천하지 않음.
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODA1MzM2NDA1LDc0MTA0NjIwNiwtMTI0Mz
-E2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAz
-Nzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbLTIwNTQ3NjkwMDYsNzQxMDQ2MjA2LC0xMj
+QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
+MDM3NzcsNTY1NTQ4ODEwXX0=
 -->
