JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -161,9 +161,15 @@ public abstract class Item {
 // 나머지 동일함. (@DiscriminatorValue 사용안함)
 ```
 * 일반적으로 추천하지 않음.
-* 
+* 장점
+	* 서브 타입을 구분해서 처리할 때 효과적.
+	* not null 제약조건 사용 가능
+* 단점
+	* 여러 자식 테이블을 함께 조회 시 성능 느림. (UNION Query)
+	* 자식 테이블 통합 쿼리 못짬.
+	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNTQ3NjkwMDYsNzQxMDQ2MjA2LC0xMj
-QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
-MDM3NzcsNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbLTI1MDQ2NDIxNSw3NDEwNDYyMDYsLTEyND
+MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
+Mzc3Nyw1NjU1NDg4MTBdfQ==
 -->
