JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -170,13 +170,15 @@ public abstract class Item {
 * 특징
 	* 구분 컬럼 사용안함.
 
-여기까지는 부
+여기까지는 부모-자식 관계의 클래스를 DB 테이블에 맵핑함.
 
 # 7.2 @MappedSuperclass
 
+부모 클래스는 테이블과 맵핑하지 않고, 부모 클래스를 상속받는 자식 클래스에게 매핑 정보만 제공한다.
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc4ODkyNTU4MCw3NDEwNDYyMDYsLTEyND
+eyJoaXN0b3J5IjpbLTU4MzMxMzUwNyw3NDEwNDYyMDYsLTEyND
 MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
 Mzc3Nyw1NjU1NDg4MTBdfQ==
 -->
