JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -176,9 +176,12 @@ public abstract class Item {
 
 부모 클래스는 테이블과 맵핑하지 않고, 부모 클래스를 상속받는 자식 클래스에게 매핑 정보만 제공한다.
 
+@MappedSuperclass = 추상클래스와 비슷, 실제 테이블과 맵핑되지 않음. 맵핑정보 상속을 목적으로 함.
+@Entity = 실제 테이블에 맵핑됨.
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU4MzMxMzUwNyw3NDEwNDYyMDYsLTEyND
+eyJoaXN0b3J5IjpbMTUzNjMzOTM0Myw3NDEwNDYyMDYsLTEyND
 MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
 Mzc3Nyw1NjU1NDg4MTBdfQ==
 -->
