JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -179,9 +179,21 @@ public abstract class Item {
 @MappedSuperclass = 추상클래스와 비슷, 실제 테이블과 맵핑되지 않음. 맵핑정보 상속을 목적으로 함.
 @Entity = 실제 테이블에 맵핑됨.
 
+[p.252 그림 7.7]
 
+```java
+@MappedSuperclass
+public abstract class BaseEntity {
+	@Id @GeneratedValue
+	private Long id;
+	private String name;
+}
+
+@Entity
+p
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUzNjMzOTM0Myw3NDEwNDYyMDYsLTEyND
+eyJoaXN0b3J5IjpbMTA4MjY4Njk0Niw3NDEwNDYyMDYsLTEyND
 MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
 Mzc3Nyw1NjU1NDg4MTBdfQ==
 -->
