JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -190,10 +190,17 @@ public abstract class BaseEntity {
 }
 
 @Entity
-p
+public class Member extends BaseEntry {
+	private String email;
+}
+
+@Entity
+public class Seller extends BaseEntry {
+	private String shopName;
+}
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA4MjY4Njk0Niw3NDEwNDYyMDYsLTEyND
+eyJoaXN0b3J5IjpbLTUwOTYxNDc0MSw3NDEwNDYyMDYsLTEyND
 MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
 Mzc3Nyw1NjU1NDg4MTBdfQ==
 -->
