--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -199,8 +199,13 @@ public class Seller extends BaseEntry {
 	private String shopName;
 }
 ```
+
+* BaseEntity에 객체들이 주로 사용하는 공통 맵핑 정보를 정의한다.
+	* id, 생성일자, 수정일자, 삭제일자 등등
+* 매핑정보 재정의
+	* @AttributeOverrides
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUwOTYxNDc0MSw3NDEwNDYyMDYsLTEyND
-MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
-Mzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbLTIwNjAyNzIyNjYsNzQxMDQ2MjA2LC0xMj
+QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
+MDM3NzcsNTY1NTQ4ODEwXX0=
 -->
