--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -204,8 +204,13 @@ public class Seller extends BaseEntry {
 	* id, 생성일자, 수정일자, 삭제일자 등등
 * 매핑정보 재정의
 	* @AttributeOverrides
+			```java
+		```
+	* @AttributeOverride
+	* @AssociationOverrides
+	* @AssociationOverride
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNjAyNzIyNjYsNzQxMDQ2MjA2LC0xMj
+eyJoaXN0b3J5IjpbLTE0NjExNTE1MTEsNzQxMDQ2MjA2LC0xMj
 QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
 MDM3NzcsNTY1NTQ4ODEwXX0=
 -->
