--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -204,13 +204,17 @@ public class Seller extends BaseEntry {
 	* id, 생성일자, 수정일자, 삭제일자 등등
 * 매핑정보 재정의
 	* @AttributeOverrides
-			```java
-		```
+```java
+@Entity
+@AttributeOverride(name="id", column=@Column(name="MEMBER_ID"))
+public class Member extends BaseEntity {...}
+```
+
 	* @AttributeOverride
 	* @AssociationOverrides
 	* @AssociationOverride
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NjExNTE1MTEsNzQxMDQ2MjA2LC0xMj
-QzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgx
-MDM3NzcsNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbMTg3MTA5MzcxMCw3NDEwNDYyMDYsLTEyND
+MxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEw
+Mzc3Nyw1NjU1NDg4MTBdfQ==
 -->
