--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -203,18 +203,27 @@ public class Seller extends BaseEntry {
 * BaseEntity에 객체들이 주로 사용하는 공통 맵핑 정보를 정의한다.
 	* id, 생성일자, 수정일자, 삭제일자 등등
 * 매핑정보 재정의
-	* @AttributeOverrides
+	* @AttributeOverride
 	```java
 	@Entity
 	@AttributeOverride(name="id", column=@Column(name="MEMBER_ID"))
 	public class Member extends BaseEntity {...}
 	```
 
-	* @AttributeOverride
+	* @AttributeOverrides
+	```java
+	@Entity
+	@AttributeOverrides({
+		@AttributeOverride(name="id", column=@Column(name="MEMBER_ID")),
+		@AttributeOverride(name="id", column=@Column(name="MEMBER_ID"))
+	})
+	public class Member extends BaseEntity {...}
+	```
+
 	* @AssociationOverrides
 	* @AssociationOverride
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc3Mzc1MDQxMCwxODcxMDkzNzEwLDc0MT
+eyJoaXN0b3J5IjpbMTUzMTU1NjUzNywxODcxMDkzNzEwLDc0MT
 A0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEz
 MjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
 -->
