JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -215,15 +215,16 @@ public class Seller extends BaseEntry {
 	@Entity
 	@AttributeOverrides({
 		@AttributeOverride(name="id", column=@Column(name="MEMBER_ID")),
-		@AttributeOverride(name="id", column=@Column(name="MEMBER_ID"))
+		@AttributeOverride(name="name", column=@Column(name="MEMBER_NAME"))
 	})
 	public class Member extends BaseEntity {...}
 	```
 
 	* @AssociationOverrides
 	* @AssociationOverride
+	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUzMTU1NjUzNywxODcxMDkzNzEwLDc0MT
-A0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEz
-MjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbOTcwMDAxNDk3LDE4NzEwOTM3MTAsNzQxMD
+Q2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMy
+NTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX0=
 -->
