--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -222,9 +222,10 @@ public class Seller extends BaseEntry {
 
 	* @AssociationOverrides
 	* @AssociationOverride
-		* >설명이 없다!
+		>설명이 없다!
+		
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NjIyNDM5OTEsMTg3MTA5MzcxMCw3ND
-EwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjEx
-MzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbOTc3OTUxNDUzLDE4NzEwOTM3MTAsNzQxMD
+Q2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMy
+NTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX0=
 -->
