--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -222,10 +222,15 @@ public class Seller extends BaseEntry {
 
 	* @AssociationOverrides
 	* @AssociationOverride
-		>설명이 없다!
-		
+		* 설명이 없다!
+* 정리
+	* 테이블과 매핑하지 않음.
+	* 자식 클래스에 Entity의 매핑 정보를 상속하기 위해 사용.
+	* @MappedSuperclass로 지정한 클래스는 Entity가 아니다.
+		* em.find(), JPQL 사용할 수 없다.
+	* 이 클래스를 직접 생성해서 사용할 일은 거의 없다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTc3OTUxNDUzLDE4NzEwOTM3MTAsNzQxMD
-Q2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMy
-NTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbMTY0NDI4NTIxMSwxODcxMDkzNzEwLDc0MT
+A0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEz
+MjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
 -->
