--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -229,8 +229,14 @@ public class Seller extends BaseEntry {
 	* @MappedSuperclass로 지정한 클래스는 Entity가 아니다.
 		* em.find(), JPQL 사용할 수 없다.
 	* 이 클래스를 직접 생성해서 사용할 일은 거의 없다.
+		* 추상 클래스로 만들자!
+	* ORM이 이야기하는 진정한 상속 맵핑은 앞의 SuperType SubType mapping 이다.
+
+# 7.3 복합키 식별관계 맵핑
+
+### 7.3.1 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY0NDI4NTIxMSwxODcxMDkzNzEwLDc0MT
-A0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEz
-MjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbLTExMTE0NTI3ODksMTg3MTA5MzcxMCw3ND
+EwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjEx
+MzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
 -->
