JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -234,9 +234,13 @@ public class Seller extends BaseEntry {
 
 # 7.3 복합키 식별관계 맵핑
 
-### 7.3.1 
+### 7.3.1 식별 관계 vs 비식별 관계
+외래키가 기본키에 포함되는지 여부에 따라 구분됨.
+
+##### 식별 관계
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMTE0NTI3ODksMTg3MTA5MzcxMCw3ND
-EwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjEx
-MzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbMTgzMTQyMDQ0NiwxODcxMDkzNzEwLDc0MT
+A0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEz
+MjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
 -->
