JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -235,12 +235,14 @@ public class Seller extends BaseEntry {
 # 7.3 복합키 식별관계 맵핑
 
 ### 7.3.1 식별 관계 vs 비식별 관계
-외래키가 기본키에 포함되는지 여부에 따라 구분됨.
+* 외래키가 기본키에 포함되는지 여부에 따라 구분됨.
 
-##### 식별 관계
+#### 식별 관계 Identifying Relationship
+
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgzMTQyMDQ0NiwxODcxMDkzNzEwLDc0MT
-A0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEz
-MjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbMjI2NTI3Mjk1LDE4NzEwOTM3MTAsNzQxMD
+Q2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMy
+NTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX0=
 -->
