JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -236,13 +236,14 @@ public class Seller extends BaseEntry {
 
 ### 7.3.1 식별 관계 vs 비식별 관계
 * 외래키가 기본키에 포함되는지 여부에 따라 구분됨.
-
-#### 식별 관계 Identifying Relationship
-
+* 식별 관계 Identifying Relationship
+	* 부모 테이블 기본키를 자식 테이블의 기본키+외래키로 사용하는 관계
+* 비식별 관계 Non-Identifying Relationship
+	* 부모 테이블 기본키를 자식 테이블의 외래키로만 사용
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjI2NTI3Mjk1LDE4NzEwOTM3MTAsNzQxMD
+eyJoaXN0b3J5IjpbNjI3OTgwNjQ3LDE4NzEwOTM3MTAsNzQxMD
 Q2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMy
 NTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX0=
 -->
