JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -240,10 +240,12 @@ public class Seller extends BaseEntry {
 	* 부모 테이블 기본키를 자식 테이블의 기본키+외래키로 사용하는 관계
 * 비식별 관계 Non-Identifying Relationship
 	* 부모 테이블 기본키를 자식 테이블의 외래키로만 사용
+	* 외래키 Null 값 허용여부에 따라 `필수적 비식별 관계(Mandatory)`, `선택적 비식별 관계(Optional)`로 구분
+* 최근 비식별 관
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjI3OTgwNjQ3LDE4NzEwOTM3MTAsNzQxMD
-Q2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMy
-NTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbMTUyNzU0MTIyNCwxODcxMDkzNzEwLDc0MT
+A0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEz
+MjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
 -->
