--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -241,11 +241,11 @@ public class Seller extends BaseEntry {
 * 비식별 관계 Non-Identifying Relationship
 	* 부모 테이블 기본키를 자식 테이블의 외래키로만 사용
 	* 외래키 Null 값 허용여부에 따라 `필수적 비식별 관계(Mandatory)`, `선택적 비식별 관계(Optional)`로 구분
-* 최근 비식별 관
+* <u>최근 비식별 관계를 주로 사용, 꼭 필요한 곳에만 식별 관계를 사용.</u>
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUyNzU0MTIyNCwxODcxMDkzNzEwLDc0MT
-A0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEz
-MjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbMTQ3Mjc0NjUyLDE4NzEwOTM3MTAsNzQxMD
+Q2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMy
+NTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX0=
 -->
