--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -243,9 +243,13 @@ public class Seller extends BaseEntry {
 	* 외래키 Null 값 허용여부에 따라 `필수적 비식별 관계(Mandatory)`, `선택적 비식별 관계(Optional)`로 구분
 * <u>최근 비식별 관계를 주로 사용, 꼭 필요한 곳에만 식별 관계를 사용.</u>
 
-
+### 장단점
+* 비식별 관계 선호
+	* 식별 관계는 `부모 테이블의 기본키를 자식 테이블로 전파`, 자식 테이블 기본키 컬럼이 점점 늘어남.
+		* Join 시 SQL 복잡해지고, 기본키 인덱스가 불필요하게 커짐.
+	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ3Mjc0NjUyLDE4NzEwOTM3MTAsNzQxMD
-Q2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMy
-NTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbLTE2OTc5MDc4OTUsMTg3MTA5MzcxMCw3ND
+EwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjEx
+MzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
 -->
