--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -247,9 +247,12 @@ public class Seller extends BaseEntry {
 * 비식별 관계 선호
 	* 식별 관계는 `부모 테이블의 기본키를 자식 테이블로 전파`, 자식 테이블 기본키 컬럼이 점점 늘어남.
 		* Join 시 SQL 복잡해지고, 기본키 인덱스가 불필요하게 커짐.
-	* 
+	* 식별 관계는 복합 기본키를 만들어야 하는 경우가 많아짐.
+	* 식별 관계 기본키는 자연키 컬럼 조합이 많음. 비즈니스 의미가 있음.
+	* 비식별 관계 기본키는 비즈니스와 상관없는 대리키를 주로 사용함.
+		* 요구사항이 변경되어도 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2OTc5MDc4OTUsMTg3MTA5MzcxMCw3ND
-EwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjEx
-MzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbNTM4MjY0NjYwLDE4NzEwOTM3MTAsNzQxMD
+Q2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMy
+NTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX0=
 -->
