--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -248,11 +248,13 @@ public class Seller extends BaseEntry {
 	* 식별 관계는 `부모 테이블의 기본키를 자식 테이블로 전파`, 자식 테이블 기본키 컬럼이 점점 늘어남.
 		* Join 시 SQL 복잡해지고, 기본키 인덱스가 불필요하게 커짐.
 	* 식별 관계는 복합 기본키를 만들어야 하는 경우가 많아짐.
+* 기본키의 유지보수
 	* 식별 관계 기본키는 자연키 컬럼 조합이 많음. 비즈니스 의미가 있음.
 	* 비식별 관계 기본키는 비즈니스와 상관없는 대리키를 주로 사용함.
-		* 요구사항이 변경되어도 
+		* 요구사항이 변경되어 비즈니스 관련된 기본키 변경이 발생해도 파급효과가 적음.
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTM4MjY0NjYwLDE4NzEwOTM3MTAsNzQxMD
-Q2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMy
-NTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbLTYwMDUxNjQ1MCwxODcxMDkzNzEwLDc0MT
+A0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEz
+MjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
 -->
