JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -257,9 +257,14 @@ public class Seller extends BaseEntry {
 	* 일대일 관계를 제외하고 식별관계는 2개 이상의 컬럼을 복합키로 사용하게 됨.
 		* 복합키는 별도의 클래스를 생성해야 한다.
 		* 하나의 기본키에 비해 많은 노력 필요.
-	* 비식별 관계는 
+	* 비식별 관계의 기본키는 대리키를 주로 사용.
+		* @GenerateValue 같은 편의성 제공.
+* 식별관계의 장점
+	* 기본키 인덱스 활용도 높음.
+	* 상위 테이블들의 기본키 컬럼을 자식, 손자 테이블이 가지고 있음.
+		* 특정 상황에서 Join 없이 하위 테이블만으로 검색 가능 (
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEzOTM5ODQyOCwxODcxMDkzNzEwLDc0MT
-A0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEz
-MjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbLTE5ODk3MTEyMTIsMTg3MTA5MzcxMCw3ND
+EwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjEx
+MzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
 -->
