JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -262,9 +262,13 @@ public class Seller extends BaseEntry {
 * 식별관계의 장점
 	* 기본키 인덱스 활용도 높음.
 	* 상위 테이블들의 기본키 컬럼을 자식, 손자 테이블이 가지고 있음.
-		* 특정 상황에서 Join 없이 하위 테이블만으로 검색 가능 (
+		* 특정 상황에서 Join 없이 하위 테이블만으로 검색 가능 (상위 테이블 기본키가 자연키이므로)
+		* `SELECT * FROM CHILD WHERE PARENT_ID='A'`
+		* `SELECT * FROM CHILD WHERE PARENT_ID='A' and CHILD_ID='B'`
+* 결론
+	* 비식별
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5ODk3MTEyMTIsMTg3MTA5MzcxMCw3ND
+eyJoaXN0b3J5IjpbLTE3OTI5NjQ3NjMsMTg3MTA5MzcxMCw3ND
 EwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjEx
 MzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
 -->
