JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -266,9 +266,12 @@ public class Seller extends BaseEntry {
 		* `SELECT * FROM CHILD WHERE PARENT_ID='A'`
 		* `SELECT * FROM CHILD WHERE PARENT_ID='A' and CHILD_ID='B'`
 * 결론
-	* 비식별
+	* 비식별 관계를 사용하라.
+	* 기본키는 Long 타입의 대리키를 사용하라.
+	* Mandatory 비식별 관계를 사용하라. INN
+	* Optional의 경우 OUTER JOIN을 사용해야 한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3OTI5NjQ3NjMsMTg3MTA5MzcxMCw3ND
+eyJoaXN0b3J5IjpbLTE2MzYyODU2MzUsMTg3MTA5MzcxMCw3ND
 EwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjEx
 MzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
 -->
