--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -268,10 +268,10 @@ public class Seller extends BaseEntry {
 * 결론
 	* 비식별 관계를 사용하라.
 	* 기본키는 Long 타입의 대리키를 사용하라.
-	* Mandatory 비식별 관계를 사용하라. INN
+	* Mandatory 비식별 관계를 사용하라. INNER JOIN만 사용해도 된다.
 	* Optional의 경우 OUTER JOIN을 사용해야 한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MzYyODU2MzUsMTg3MTA5MzcxMCw3ND
+eyJoaXN0b3J5IjpbLTExNDk5MjExNDcsMTg3MTA5MzcxMCw3ND
 EwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjEx
 MzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
 -->
