JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -269,9 +269,12 @@ public class Seller extends BaseEntry {
 	* 비식별 관계를 사용하라.
 	* 기본키는 Long 타입의 대리키를 사용하라.
 	* Mandatory 비식별 관계를 사용하라. INNER JOIN만 사용해도 된다.
-	* Optional의 경우 OUTER JOIN을 사용해야 한다.
+	* Optional의 경우 OUTER JOIN을 사용해야 한다. (성능차이는 미미하다는 블로그가 있음)
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNDk5MjExNDcsMTg3MTA5MzcxMCw3ND
-EwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLTE0NjEx
-MzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbMTk3NTMzNzM3NiwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
