JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -243,7 +243,7 @@ public class Seller extends BaseEntry {
 	* 외래키 Null 값 허용여부에 따라 `필수적 비식별 관계(Mandatory)`, `선택적 비식별 관계(Optional)`로 구분
 * <u>최근 비식별 관계를 주로 사용, 꼭 필요한 곳에만 식별 관계를 사용.</u>
 
-### 장단점
+### 7.3.2 장단점
 * 비식별 관계 선호
 	* 식별 관계는 `부모 테이블의 기본키를 자식 테이블로 전파`, 자식 테이블 기본키 컬럼이 점점 늘어남.
 		* Join 시 SQL 복잡해지고, 기본키 인덱스가 불필요하게 커짐.
@@ -271,10 +271,11 @@ public class Seller extends BaseEntry {
 	* Mandatory 비식별 관계를 사용하라. INNER JOIN만 사용해도 된다.
 	* Optional의 경우 OUTER JOIN을 사용해야 한다. (성능차이는 미미하다는 블로그가 있음)
 
+### 7.3.3 복합키 비식별 관계
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk3NTMzNzM3NiwtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbNzUxOTQ2NjMzLC0xMTQ5OTIxMTQ3LDE4Nz
+EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
+MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
+0=
 -->
