JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -272,10 +272,19 @@ public class Seller extends BaseEntry {
 	* Optional의 경우 OUTER JOIN을 사용해야 한다. (성능차이는 미미하다는 블로그가 있음)
 
 ### 7.3.3 복합키 비식별 관계
-
+#### 기본키 구성 시
+```java
+@Entity
+public class Hello {
+	@Id
+	private String id;
+}
+```
+#### 복합키 구성 시
+* 위처럼 단순하게 만들면 오류 발
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzUxOTQ2NjMzLC0xMTQ5OTIxMTQ3LDE4Nz
-EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
-MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
-0=
+eyJoaXN0b3J5IjpbMTgyMTc5MDYxNCwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
