JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -281,9 +281,14 @@ public class Hello {
 }
 ```
 #### 복합키 구성 시
-* 위처럼 단순하게 만들면 오류 발
+* 복합키를 필드만 추가해서는 에러남.
+* **식별자 클래스를 별도로 만들어야 함.**
+* 두 가지 방법
+	* @IdClass
+		* 
+	* @EmbeddedId
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgyMTc5MDYxNCwtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbMTg1MzQ3NzMyNywtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
