JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -285,11 +285,17 @@ public class Hello {
 * **식별자 클래스를 별도로 만들어야 함.**
 * 두 가지 방법
 	* @IdClass
-		* 
+		* RDBMS 가까운 방법 - 비추하겠지?
 	* @EmbeddedId
+		* 객체지향 가까운 방법
+
+---
+#### @IdClass
+[p.257]
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg1MzQ3NzMyNywtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbNDA4MDE5NjU1LC0xMTQ5OTIxMTQ3LDE4Nz
+EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
+MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
+0=
 -->
