JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -292,10 +292,22 @@ public class Hello {
 ---
 #### @IdClass
 [p.257]
-
+아래는 식별자 클래스.
+```java
+@Entity
+@IdClass(ParentId.class)
+public class Parent {
+	@Id
+	@Column(name = "PARENT_ID1")
+	private String id1;
+	@Id
+	@Column(name = "PARENT_ID2")
+	private String id2;
+}
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDA4MDE5NjU1LC0xMTQ5OTIxMTQ3LDE4Nz
-EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
-MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
-0=
+eyJoaXN0b3J5IjpbLTU4ODUxNTI4OSwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
