JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -292,7 +292,7 @@ public class Hello {
 ---
 #### @IdClass
 [p.257]
-아래는 식별자 클래스.
+아래는 부모 클래스.
 ```java
 @Entity
 @IdClass(ParentId.class)
@@ -303,10 +303,20 @@ public class Parent {
 	@Id
 	@Column(name = "PARENT_ID2")
 	private String id2;
+	
+	private String name;
 }
 ```
+아래는 식별자 클래스
+```java
+public class ParentId implements Serializable {
+	private String id1;
+	private String id2;
+}
+```
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU4ODUxNTI4OSwtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbMTkzNjU5MDc5NywtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
