JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -309,6 +309,9 @@ public class Parent {
 ```
 아래는 식별자 클래스
 ```java
+@Data //equals, hashcode
+@NonArgsConstructor
+@AllArgsConstructor
 public class ParentId implements Serializable {
 	private String id1;
 	private String id2;
@@ -316,8 +319,8 @@ public class ParentId implements Serializable {
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkzNjU5MDc5NywtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbLTE3NjYxNDQ0MDEsLTExNDk5MjExNDcsMT
+g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
+MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
+BdfQ==
 -->
