JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -309,7 +309,7 @@ public class Parent {
 ```
 아래는 식별자 클래스
 ```java
-@Data //equals, hashcode
+@Data //lombok equals, hashCode, toString, getter/setter
 @NonArgsConstructor
 @AllArgsConstructor
 public class ParentId implements Serializable {
@@ -317,9 +317,11 @@ public class ParentId implements Serializable {
 	private String id2;
 }
 ```
-
+* 식별자 클래스의 필요 조건
+	* 식별자의 속성명이 같아야 함. (id1, id2)
+	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NjYxNDQ0MDEsLTExNDk5MjExNDcsMT
+eyJoaXN0b3J5IjpbLTExMjc1NzYxMDgsLTExNDk5MjExNDcsMT
 g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
 MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
 BdfQ==
