--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -319,10 +319,19 @@ public class ParentId implements Serializable {
 ```
 * 식별자 클래스의 필요 조건
 	* 식별자의 속성명이 같아야 함. (id1, id2)
-	* 
+	* Serializable interface 구현
+	* 기본 생성자
+	* public class
+
+```java
+Parent 
+```
+
+아래는 자식 클래스
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMjc1NzYxMDgsLTExNDk5MjExNDcsMT
-g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
-MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
-BdfQ==
+eyJoaXN0b3J5IjpbLTg4ODE0MDI3NCwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
