JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -324,13 +324,22 @@ public class ParentId implements Serializable {
 	* public class
 
 ```java
-Parent 
+// 저장
+Parent parent = new Parent();
+parent.setId1("myId1");
+parent.setId2("myId2");
+parent.setName("myName");
+em.persist(parent);
+
+// 조회
+ParentId parentId = new ParentId("myId1", "myId2");
+Parent parent = em.find(Parent.class, parentId);
 ```
 
 아래는 자식 클래스
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4ODE0MDI3NCwtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbMTkyNTQ2NjQ3MCwtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
