JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -292,7 +292,7 @@ public class Hello {
 ---
 #### @IdClass
 [p.257]
-아래는 부모 클래스.
+1. 부모 클래스.
 ```java
 @Entity
 @IdClass(ParentId.class)
@@ -307,7 +307,7 @@ public class Parent {
 	private String name;
 }
 ```
-아래는 식별자 클래스
+2. 식별자 클래스
 ```java
 @Data //lombok equals, hashCode, toString, getter/setter
 @NonArgsConstructor
@@ -336,11 +336,20 @@ ParentId parentId = new ParentId("myId1", "myId2");
 Parent parent = em.find(Parent.class, parentId);
 ```
 
-아래는 자식 클래스
-
+3. 자식 클래스
+```java
+@Entity
+public class Child {
+	@Id
+	private String id;
+	@ManyToOne
+	@JoinColumns({
+	})
+	private Parent parent;
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkyNTQ2NjQ3MCwtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbLTEzMDg4NjM1ODgsLTExNDk5MjExNDcsMT
+g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
+MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
+BdfQ==
 -->
