JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -344,12 +344,15 @@ public class Child {
 	private String id;
 	@ManyToOne
 	@JoinColumns({
+		@JoinColumn(name="PARENT_ID1", referencedColumnName="PARENT_ID1"),
+		@JoinColumn(name="PARENT_ID2", referencedColumnName="PARENT_ID2")
 	})
 	private Parent parent;
+}
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMDg4NjM1ODgsLTExNDk5MjExNDcsMT
-g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
-MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
-BdfQ==
+eyJoaXN0b3J5IjpbMTg0MDkwNzk5OSwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
