JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -272,7 +272,9 @@ public class Seller extends BaseEntry {
 	* Optional의 경우 OUTER JOIN을 사용해야 한다. (성능차이는 미미하다는 블로그가 있음)
 
 ### 7.3.3 복합키 비식별 관계
-부모가 복하
+* 부모가 복합키로 구성되어 있다.
+* 자식이 부모의 복합키를 외래키로 가진다.
+* 자식의 기본키에는 부모의 기본키를 포함하지 않는다.
 #### 기본키 구성 시
 ```java
 @Entity
@@ -353,10 +355,11 @@ public class Child {
 ```
 ---
 #### @EmbeddedId
+* 좀 더 객체지향적이다!
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTc2ODYxMDQ0LC0xMTQ5OTIxMTQ3LDE4Nz
-EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
-MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
-0=
+eyJoaXN0b3J5IjpbLTg3MDM2MDk4NCwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
