--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -356,10 +356,23 @@ public class Child {
 ---
 #### @EmbeddedId
 * 좀 더 객체지향적이다!
-
+1. 부모 클래스
+```java
+@Entity
+public class Parent {
+	@EmbeddedId
+	private ParentId id;
+	private String name;
+}
+```
+2. 식별자 클래스
+```java
+@Embeddable
+public class ParentId e
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg3MDM2MDk4NCwtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbODY0MjM5MjQ3LC0xMTQ5OTIxMTQ3LDE4Nz
+EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
+MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
+0=
 -->
