JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -368,11 +368,20 @@ public class Parent {
 2. 식별자 클래스
 ```java
 @Embeddable
-public class ParentId e
+@Data
+@NonArgsConstructor
+public class ParentId implements Serializable {
+	@Column(name = "PARENT_ID1")
+	private String id1;
+	@Column(name = "PARENT_ID2")
+	private String id2;
+}
 ```
+* 식별자 클래스의 필요 조건
+	* @
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODY0MjM5MjQ3LC0xMTQ5OTIxMTQ3LDE4Nz
-EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
-MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
-0=
+eyJoaXN0b3J5IjpbLTE0MzUxNDY2MTQsLTExNDk5MjExNDcsMT
+g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
+MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
+BdfQ==
 -->
