JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -378,10 +378,17 @@ public class ParentId implements Serializable {
 }
 ```
 * 식별자 클래스의 필요 조건
-	* @
+	* @Embeddable annotation <-- 이것만 다름. IdClass는 식별자의 속성명이 같아야 함. (id1, id2)
+	* Serializable interface 구현
+	* equals, hashCode 구현
+	* 기본 생성자
+	* public class
+
+```java
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MzUxNDY2MTQsLTExNDk5MjExNDcsMT
-g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
-MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
-BdfQ==
+eyJoaXN0b3J5IjpbNDI1MDk2ODE4LC0xMTQ5OTIxMTQ3LDE4Nz
+EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
+MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
+0=
 -->
