--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -385,10 +385,21 @@ public class ParentId implements Serializable {
 	* public class
 
 ```java
+// 저장
+Parent parent = new Parent();
+ParentId parentId = new ParentId("myId1", "myId2"); //식별자 클래스 사용
+parent.setId(parentId);
+parent.setName("myName");
+em.persist(parent);
 
+// 조회
+
+ParentId parentId = new ParentId("myId1", "myId2");
+Parent parent = em.find(Parent.class, parentId);
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDI1MDk2ODE4LC0xMTQ5OTIxMTQ3LDE4Nz
-EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
-MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
-0=
+eyJoaXN0b3J5IjpbMTk1MzQxNDY1MywtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
