JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -392,13 +392,15 @@ parent.setId(parentId);
 parent.setName("myName");
 em.persist(parent);
 
-// 조회
-
+// 조회 (IdClass와 동일하다)
 ParentId parentId = new ParentId("myId1", "myId2");
 Parent parent = em.find(Parent.class, parentId);
 ```
+
+#### equals(), hashCode()
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk1MzQxNDY1MywtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbLTEwNTQzNTM4MCwtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
