JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -400,10 +400,13 @@ Parent parent = em.find(Parent.class, parentId);
 #### equals(), hashCode()
 * persistent context는 Entity의 식별자를 키로 사용해서 Entity들을 관리한다.
 	* 마치 내부적으로 `Map<ParentId, Parent>` 를 구성한 것처럼...
-	* ParentId 거
+	* ParentId 검색 시 equals(), hashCode()가 overriding 안되어 있으면 못찾는다. ㅋㅋ
+
+> @EmbeddedId가 @IdClass 보다 객체 지향 적이다.
+> 중복도 없고 좋아보이긴 하지만 특정 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTAxNTg5NDMxLC0xMTQ5OTIxMTQ3LDE4Nz
-EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
-MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
-0=
+eyJoaXN0b3J5IjpbMjA2MTczNTQzMiwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
