JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -403,9 +403,14 @@ Parent parent = em.find(Parent.class, parentId);
 	* ParentId 검색 시 equals(), hashCode()가 overriding 안되어 있으면 못찾는다. ㅋㅋ
 
 > @EmbeddedId가 @IdClass 보다 객체 지향 적이다.
-> 중복도 없고 좋아보이긴 하지만 특정 
+
+> 중복도 없고 좋아보이긴 하지만 특정 상황에서 JPQL이 조금 더 길어질 수 있다.
+
+> 복합키에는 @GenerateValue 를 사용할 수 없다. 복합키 구성하는 여러 컬럼 중 하나에도 못쓴다!
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA2MTczNTQzMiwtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbMTUwNjY5OTAyMiwtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
