--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -408,10 +408,12 @@ Parent parent = em.find(Parent.class, parentId);
 
 > 복합키에는 @GenerateValue 를 사용할 수 없다. 복합키 구성하는 여러 컬럼 중 하나에도 못쓴다!
 
+### 7.3.4 복합키 식별 관계
+* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUwNjY5OTAyMiwtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbNjA4MTY2OTgsLTExNDk5MjExNDcsMTg3MT
+A5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAx
+NTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ
+==
 -->
